design in progress

--- a/index.html
+++ b/index.html
@@ -37,15 +37,19 @@
       <div class="summary">
         <div class="summary__ip-address">
           <h3 class="summary__title">Ip address</h3>
+          <h3 class="summary__value">192.212.174.101</h3>
         </div>
         <div class="summary__location">
           <h3 class="summary__title">Location</h3>
+          <h3 class="summary__value">Brooklyn, NY 10001</h3>
         </div>
         <div class="summary__timezone">
           <h3 class="summary__title">Timezone</h3>
+          <h3 class="summary__value">UTC -05:00</h3>
         </div>
         <div class="summary__isp">
           <h3 class="summary__title">isp</h3>
+          <h3 class="summary__value">SpaceX Starlink</h3>
         </div>
       </div>
     </header>
