--- a/index.html
+++ b/index.html
@@ -18,6 +18,12 @@
       href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/leaflet@1.9.2/dist/leaflet.css"
+      integrity="sha256-sA+zWATbFveLLNqWO2gtiw3HL/lh1giY/Inf1BJ0z14="
+      crossorigin=""
+    />
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
@@ -37,11 +43,11 @@
       <div class="summary">
         <div class="summary__ip-address">
           <h3 class="summary__title">Ip address</h3>
-          <h3 class="summary__value">192.212.174.101</h3>
+          <h3 class="summary__value">------------</h3>
         </div>
         <div class="summary__location">
           <h3 class="summary__title">Location</h3>
-          <h3 class="summary__value">Brooklyn, NY 10001</h3>
+          <h3 class="summary__value">------------</h3>
         </div>
         <div class="summary__timezone">
           <h3 class="summary__title">Timezone</h3>
@@ -49,7 +55,7 @@
         </div>
         <div class="summary__isp">
           <h3 class="summary__title">isp</h3>
-          <h3 class="summary__value">SpaceX Starlink</h3>
+          <h3 class="summary__value">------------</h3>
         </div>
       </div>
     </header>
@@ -70,6 +76,12 @@
     <script
       nomodule
       src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"
+    ></script>
+
+    <script
+      src="https://unpkg.com/leaflet@1.9.2/dist/leaflet.js"
+      integrity="sha256-o9N1jGDZrf5tS+Ft4gbIK7mYMipq9lqpVJ91xHSyKhg="
+      crossorigin=""
     ></script>
   </body>
 </html>
