--- a/index.html
+++ b/index.html
@@ -83,5 +83,6 @@
       integrity="sha256-o9N1jGDZrf5tS+Ft4gbIK7mYMipq9lqpVJ91xHSyKhg="
       crossorigin=""
     ></script>
+    <script src="script.js"></script>
   </body>
 </html>
