done with basic feature -(without structure)

--- a/index.html
+++ b/index.html
@@ -43,19 +43,21 @@
       <div class="summary">
         <div class="summary__ip-address">
           <h3 class="summary__title">Ip address</h3>
-          <h3 class="summary__value">------------</h3>
+          <h3 class="summary__value summary__value--address">------------</h3>
         </div>
         <div class="summary__location">
           <h3 class="summary__title">Location</h3>
-          <h3 class="summary__value">------------</h3>
+          <h3 class="summary__value summary__value--location">------------</h3>
         </div>
         <div class="summary__timezone">
           <h3 class="summary__title">Timezone</h3>
-          <h3 class="summary__value">UTC -05:00</h3>
+          <h3 class="summary__value">
+            UTC <span class="summary__value--timezone"> -05:00 </span>
+          </h3>
         </div>
         <div class="summary__isp">
           <h3 class="summary__title">isp</h3>
-          <h3 class="summary__value">------------</h3>
+          <h3 class="summary__value summary__value--isp">------------</h3>
         </div>
       </div>
     </header>
